Various css tweaks and fixes.
Remove question button was pushing questions down with its presence,
changed positioning so that it lives in each question's top margin.

Fix print styles having long questions overflowing the edge of the
border. Unfortunately, this seems to be caused by bootstrap, so I
limited bootstrap to only load for screens and not print.

Decrease the truncation character limit. It turns out that when the
scrollbar appears, it decreases the space available for question text.
I've added tooltips of the whole question text to each question to
compensate.

Note that I gave up on using jquery tooltips, can't seem to get them to
pick up my configuration directives, so it's just using the built in
browser tooltips right now.

The Form title now has a gray background instead of the form questions
area, it looks a bit better that way.

--- a/web/css/formbuilder.css
+++ b/web/css/formbuilder.css
@@ -35,7 +35,7 @@
 
 #formcontent {
     margin-left: 25em;
-    padding: 0.5em;
+    padding: 0;
 }
 
 /* Sidebar (questions bank) */
@@ -249,12 +249,19 @@ ul#question-list li:first-child {
 
 .chardinjs-show-element
 {
-    color: #cccccc;
+    color: #ddd;
 }
 
 /* Default size for the response text boxes */
 .responseText {
     bottom: 17px;
+    width: 100%;
+}
+
+h2.form-name {
+    background: #f2f2f2;
+    margin: 0;
+    padding: 0.5em;
 }
 
 #form-paper {
@@ -262,10 +269,12 @@ ul#question-list li:first-child {
 }
 
 #form-paper button {
+    position: absolute;
     padding: 0.5em;
     border: none;
     background: transparent;
-    float: right;
+    right: 0.5em;
+    top: -0.5em;
 }
 
 #form-paper button .icon-remove {
@@ -274,4 +283,9 @@ ul#question-list li:first-child {
 
 #form-paper button:hover .icon-remove {
     color: red;
+}
+
+/* Footer */
+footer {
+    padding: 1em;
 }
